--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,4 +13,4 @@ jobs:
           node-version: "12.x"
       - run: npm install
       - run: npm run build --if-present
-      - run: npm test:unit
+      - run: npm run test:unit
