--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "axios": "^0.24.0",
     "balm-ui": "^9.39.0",
     "core-js": "^3.6.5",
+    "lru-cache": "^6.0.0",
     "register-service-worker": "^1.7.1",
+    "swrv": "^0.9.4-2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
