--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@babel/plugin-proposal-optional-chaining": "^7.16.5",
     "axios": "^0.24.0",
     "balm-ui": "^9.39.0",
     "core-js": "^3.6.5",
+    "path": "^0.12.7",
     "register-service-worker": "^1.7.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
+    "vue3-charts": "^1.1.26",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
