--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "core-js": "^3.6.5",
     "path": "^0.12.7",
     "register-service-worker": "^1.7.1",
+    "swrv": "^1.0.0-beta.8",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vue3-charts": "^1.1.26",
