--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.16.5",
+    "@vue/composition-api": "^1.4.2",
     "axios": "^0.24.0",
     "balm-ui": "^9.39.0",
     "core-js": "^3.6.5",
@@ -20,7 +21,8 @@
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vue3-charts": "^1.1.26",
-    "vuex": "^4.0.0-0"
+    "vuex": "^4.0.0-0",
+    "vuex-composition-helpers": "^2.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
