--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,8 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      VUE_APP_GITHUB_ACCESS_TOKEN: ${{ secrets.VUE_APP_GITHUB_ACCESS_TOKEN }}
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js
