--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "vue-cli-service serve",
+    "start": "node server.js",
+    "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
@@ -15,8 +16,10 @@
     "axios": "^0.24.0",
     "balm-ui": "^9.39.0",
     "core-js": "^3.6.5",
+    "express": "^4.17.2",
     "path": "^0.12.7",
     "register-service-worker": "^1.7.1",
+    "serve-static": "^1.14.2",
     "swrv": "^1.0.0-beta.8",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
