--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.24.0",
     "balm-ui": "^9.39.0",
     "core-js": "^3.6.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "path": "^0.12.7",
     "register-service-worker": "^1.7.1",
