--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "serve-static": "^1.14.2",
     "swrv": "^1.0.0-beta.8",
     "vue": "^3.0.0",
+    "vue-loader": "^15.9.8",
     "vue-router": "^4.0.0-0",
     "vue3-charts": "^1.1.26",
     "vuex": "^4.0.0-0",
@@ -34,12 +35,13 @@
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-pwa": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-unit-jest": "~4.5.0",
+    "@vue/cli-plugin-unit-jest": "^4.5.15",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-airbnb": "^5.0.2",
-    "@vue/test-utils": "^2.0.0-0",
+    "@vue/test-utils": "^2.0.0-rc.18",
+    "axios-mock-adapter": "^1.20.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
