--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.16.5",
+    "@babel/preset-env": "^7.16.5",
     "@vue/composition-api": "^1.4.2",
     "axios": "^0.24.0",
     "balm-ui": "^9.39.0",
     "core-js": "^3.6.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "lodash": "^4.17.21",
     "path": "^0.12.7",
+    "regenerator-runtime": "^0.13.9",
     "register-service-worker": "^1.7.1",
     "serve-static": "^1.14.2",
     "swrv": "^1.0.0-beta.8",
